--- a/food-cal/src/components/dashboardWidget.css
+++ b/food-cal/src/components/dashboardWidget.css
@@ -1,6 +1,6 @@
 .dashboardWidget{
     background-color: white;
-    box-shadow: 3px 3px 3px #b3b3b3;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
     border-radius: 5px;
     margin: 8px;
 }
