--- a/food-cal/src/components/dashboardWidget.css
+++ b/food-cal/src/components/dashboardWidget.css
@@ -4,3 +4,15 @@
     border-radius: 5px;
     margin: 8px;
 }
+
+.dashboardWidget ::-webkit-scrollbar {
+    display: none;
+  }
+
+.widgetTitle {
+    font-family: sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    padding: 8px;
+    margin: 0;
+}
